Fix XSLT to support block and inline elements. Add warning as recommended at http://stackoverflow.com/questions/3360017/why-does-xslt-output-all-text-by-default

--- a/site/styles/guacamole.css
+++ b/site/styles/guacamole.css
@@ -92,6 +92,7 @@ div.notice {
     border: 1px solid black;
     box-shadow: 0.1em 0.1em 0.5em rgba(0, 0, 0, 0.5);
     box-shadow: inset -0.1em -0.1em 0.5em rgba(0, 0, 0, 0.5);
+    overflow: hidden;
 }
 
 div.tile {
